--- a/Views/Home/Userprofile.cshtml
+++ b/Views/Home/Userprofile.cshtml
@@ -1,7 +1,8 @@
-﻿@{
-	ViewData["Title"] = "Admin Dashboard";
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
 }
-
 @section Styles {
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
