--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -181,7 +181,7 @@ li.breadcrumb-item {
   padding: 0.75rem 2rem;
   border-bottom: 1px solid var(--border-color);
   display: flex;
-  justify-content: space-between;
+  justify-content: end;
   align-items: center;
   position: fixed;
   top: 0;
@@ -242,8 +242,13 @@ main.content-fluid {
 
 /* --- Mobile / Responsiveness --- */
 @media (max-width: 991.98px) {
+
   .sidebar {
     display: none;
+  }
+
+  .header{
+    justify-content: end;
   }
 
   .main-content {
@@ -509,11 +514,36 @@ main.content-fluid {
     }
 } */
 
+.btn{
+  display: none;
+}
+
+.main_button{
+  background-color: transparent;
+  border: none;
+}
+
+
+
 @media (max-width: 991.98px) {
   .card-footer.d-flex.flex-wrap.justify-content-between.align-items-center {
     flex-direction: column;
     gap: 10px;
   }
+
+  .main_button{
+    display: none;
+  }
+
+  .btn {
+    display: block;
+  }
+
+
+/*  .jsakhdjh{
+    display: none;
+  }*/
+
 }
 
 
