--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -274,7 +274,7 @@
 															<td>${user.lastAPICallDate ? new Date(user.lastAPICallDate).toLocaleDateString() : '-'}</td>
 																<td>${user.adminNotes || '-'}</td>
 																	<td>${user.appCode || '-'}</td>
-																	<td>${user.subscriptionStatus || '-'}</td>
+																	<td>${user.status || '-'}</td>
 											 <td>
 								<button class="btn btn-outline-secondary btn-sm edit-btn" data-userid="${user.userID}">
 										<i class="fas fa-pencil-alt me-1"></i>Edit
